corrected error on left menu where a scrollbar appeared on x axis, complete project

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -96,7 +96,7 @@ footer h4:hover {
     }
 
     .profile-outline {
-        margin-left: 1.5px;
+        margin-left: 2px;
     }
 
     .responsive .ma-m {
