--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ html {
     --header-height: 100px;
     --footer-height: 100px;
     --left-menu-width: 300px;
-    --left-menu-width-minimised: 70px;
+    --left-menu-width-minimised: 73px;
     --icon-small-width:30px;
     --icon-width:40px;
 }
